--- a/src/hero/hero.css
+++ b/src/hero/hero.css
@@ -1716,6 +1716,10 @@ input.inputStyle {
     height: 190px !important;
     padding: 15px 10px !important;
 }
+
+.screen_position_container .MuiGrid-root.MuiGrid-item.MuiGrid-grid-xs-12.MuiGrid-grid-sm-12.MuiGrid-grid-md-4.MuiGrid-grid-lg-4.css-805qnm-MuiGrid-root {
+    margin-top: 100px !important;
+}
 }
 
 @media screen and (max-width: 600px){
@@ -2521,5 +2525,20 @@ select#dropdown {
 }
 .hello-admin {
     padding: 0px 15px 25px 15px;
+}
+
+.screen_position_container .MuiGrid-root.MuiGrid-item.MuiGrid-grid-xs-12.MuiGrid-grid-sm-12.MuiGrid-grid-md-4.MuiGrid-grid-lg-4.css-805qnm-MuiGrid-root {
+    margin-top: 100px !important;
+}
+
+
+
+
+
+.screen_position_container .MuiGrid-root.MuiGrid-item.MuiGrid-grid-xs-12.MuiGrid-grid-sm-12.MuiGrid-grid-md-4.MuiGrid-grid-lg-4.css-805qnm-MuiGrid-root {margin-top: 100px !important;}
+
+.unique-class-29 {
+    display: flex;
+    flex-direction: column !important;
 }
 }
