--- a/src/hero/hero.css
+++ b/src/hero/hero.css
@@ -2531,4 +2531,32 @@ select#dropdown {
 .hello-admin {
     padding: 0px 15px 25px 15px;
 }
+
+
+.heads {
+    color: #002758;
+    /* font-family: Urbanist; */
+    font-size: 35px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+.popup2 {
+    background-image: url(http://localhost:3000/static/media/Frame%20153.e9c73ba….png) !important;
+    background-size: cover !important;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    width: 400px;
+    height: 307px;
+    background-color: #FFF;
+    border-radius: 10px;
+    background: #FFF;
+    box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.25);
+}
+
+
+
+
 }
