--- a/src/hero/hero.css
+++ b/src/hero/hero.css
@@ -2649,4 +2649,13 @@ select#dropdown {
     flex-direction: column !important;
 }
 
+img.img_control {
+    height: 18vh !important;
+    max-height: 18vh !important;
+    max-width: 40% !important;
+    min-height: 18vh !important;
+    min-width: 40% !important;
+    width: 40% !important;
+}
+
 }
