--- a/src/hero/hero.css
+++ b/src/hero/hero.css
@@ -2050,7 +2050,9 @@ button.showpickedvendor {
     position: relative;
 }
 
-
+.gogohhh{
+    position: relative !important;
+}
 .classname-hsgd0 {
     margin: 0px !important;
 }
