--- a/src/component/header/header.css
+++ b/src/component/header/header.css
@@ -26,7 +26,7 @@ border-radius: 10px;
 background: #B22234;
 border: 2px solid #B22234;
 color: #FFF;
-font-family: Rajdhani;
+font-family: Urbanist;
 font-size: 20px;
 font-style: normal;
 font-weight: 700;
@@ -40,7 +40,7 @@ line-height: normal;}
     align-items: center;
     background: transparent;
     color: #FFF;
-    font-family: Rajdhani;
+    font-family: Urbanist;
     font-size: 20px;
     font-style: normal;
     font-weight: 700;
