--- a/src/hero/hero.css
+++ b/src/hero/hero.css
@@ -1,4 +1,10 @@
 /* new steps */
+.jj{
+
+    gap:20px;
+    overflow-x: scroll;
+}
+
 *{
     padding: 0;
     margin: 0;
@@ -2953,6 +2959,504 @@ img.image_slider.unique-class-49 {
         text-align: center;
         font-size: 20px;
     } 
+
+
+
+
+    section.main-dashbord {
+        width: 100%;
+        height: 100vh;
+        background-color: #DEF7FF;
+    }
+    
+    .main-mb {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    .mb-part-2 {
+        width: 23%;
+        height: 100vh;
+        background: #FFF;
+        box-shadow: -4px 4px 14px 0px rgba(0, 0, 0, 0.25);
+        padding: 50px 30px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 30px;
+    }
+    
+    .mb-part-1 {
+        width: 75%;
+        padding: 2%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        gap: 30px;
+    }
+    
+    .mb-box-1 {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    
+    .mb-list {
+        height: 128px;
+        width: 33%;
+        border-radius: 10px;
+        background: #FFF;
+        box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.25);
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 22px 30px;
+    }
+    
+    .mb-list-img {
+        width: 18%;
+    }
+    
+    .mb-list-img img {
+        width: 100%;
+    }
+    
+    .mb-list span {
+        width: 59%;
+    }
+    
+    .mb-list-img img {
+        width: 100%;
+    }
+    
+    .mb-list span h3 {
+        color: #01BAF2;
+        font-family: system-ui;
+        font-size: 30px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: normal;
+    }
+    
+    .mb-list span a {}
+    
+    .mb-list h2 {
+        color: #01BAF2;
+        font-family: system-ui;
+        font-size: 50px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: normal;
+    }
+    
+    .mb-list span a {
+        color: #002758;
+        font-family: sans-serif;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        text-decoration-line: underline;
+    }
+    
+    .mb-box-2 {
+        width: 100%;
+        height: 74vh;
+        border-radius: 10px;
+        background: #FFF;
+    
+    /* General Shadows/Shadow 01 */
+        box-shadow: 0px 2px 6px 0px rgba(13, 10, 44, 0.08);
+    }
+    
+    .my-list-1 {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    
+    
+    .id-my-card {
+        width: 74%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    
+    .id-my-card img {
+        width: 32%;
+    }
+    
+    .id-my-card span h2 {
+        color: #000;
+        font-family: system-ui;
+        font-size: 30px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: normal;
+    }
+    
+    .id-my-card span h3 {
+        color: #01BAF2;
+        font-family: system-ui;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: normal;
+    }
+    
+    .my-list-1 svg {
+        width: 30px;
+        height: 30px;
+    }
+    
+    .my-list-2 {
+        width: 100%;
+        height: 181px;
+        border-radius: 20px;
+        opacity: 0.9;
+        background: #01BAF2;
+        box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.25);
+        padding: 28px;
+    }
+    
+    .my-list-2 p {
+        color: #FFF;
+        font-family: system-ui;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: normal;
+    }
+    
+    .my-list-2 h3 {
+        color: #FFF;
+        font-family: system-ui;
+        font-size: 60px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: normal;
+    }
+    
+    .my-list-2 a {
+        color: #FFF;
+        font-family: system-ui;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: normal;
+        text-decoration-line: underline;
+    }
+    
+    .my-list-3 {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    
+    .my-list-3 span h3 {
+        color: var(--Neutral-Colors-Text-Gray, #615E83);
+        font-feature-settings: 'clig' off, 'liga' off;
+    
+    /* Text single/400/Regular */
+        font-family: system-ui;
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 20px; /* 111.111% */
+    }
+    
+    .my-list-3 span h2 {
+        color: var(--Neutral-Colors-Black, #1E1B39);
+        font-feature-settings: 'clig' off, 'liga' off;
+    
+    /* Headings/H4 */
+        font-family: system-ui;
+        font-size: 22px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 28px; /* 127.273% */
+    }
+    
+    .my-list-5 {
+        width: 100%;
+        padding: 10px 0px;
+        background: #D9D9D9;
+    }
+    
+    .my-list-5 p {
+        color: #333;
+        font-family: system-ui;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+    }
+    
+    .my-list-6 {
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
+    }
+    
+    .my-list-6 span {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        padding: 10px;
+        border-bottom: 1px solid #000;
+    }
+    
+    .my-list-6 span h2 {
+        color: #002758;
+        font-family: system-ui;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+    }
+    
+    .my-list-6 span svg {
+        width: 30px;
+        height: 30px;
+    }
+
+
+
+
+
+    .main-popup-div {width: 34%;box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.25);height: 796px;height: 85vh;padding: 50px;border-radius: 10px;border: 2px solid #01BAF2;background: #fff;}
+
+.list-1-popup-div {
+    width: 100%;
+}
+
+.tital-list-1 {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    position: relative;
+    gap: 35px;
+    padding-bottom: 6px;
+    border-bottom: 1px solid #000;
+}
+
+.list-tital.img {
+    width: 30%;
+    border-radius: 55%;
+}
+
+.list-tital.img img {
+    width: 100%;
+}
+
+.list-tital-1 {
+    width: 58%;
+}
+
+.tital-list-para {
+    width: 100%;
+}
+
+.tital-list-para p {
+    color: #01BAF2;
+    font-family: system-ui;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+.tital-list-para h2 {
+    color: #000;
+    font-family: system-ui;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+.tital-list-ides {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px  10px;
+}
+
+.tital-list-ides span {
+    width: 48%;
+    color: #333;
+    font-family: system-ui;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.tital-list-ides span svg {
+    width: 25px;
+    height: 25px;
+}
+
+.your-tital {
+    width: 25%;
+    position: absolute;
+    right: -25px;
+    top: -52px;
+}
+
+.your-tital h2 {
+    color: #01BAF2;
+    font-family: Urbanist;
+    font-size: 110px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+.your-tital h4 {
+    color: #333;
+    font-family: system-ui;
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    text-align: center;
+}
+
+span.fukk-with {
+    width: 80%;
+}
+
+.list-2-popup-div {
+    width: 100%;
+    padding: 20px 0px;
+}
+
+.list-2-popup-div h2 {
+    color: #000;
+    font-family: system-ui;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+.list-2-popup-div p {
+    color: rgba(0, 39, 88, 0.90);
+    font-family: system-ui;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    padding-top: 5px;
+}
+
+.list-3-popup-div {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 10px;
+    border: 2px solid #01BAF2;
+    background: #DEF7FF;
+    padding: 25px;
+}
+
+.boxin-1 {
+    width: 60%;
+}
+
+.boxin-2 {
+    width: 38%;
+}
+
+.boxin-2 img {
+    width: 100%;
+}
+
+.boxin-1 h2 {
+    color: #000;
+    font-family: system-ui;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+.boxin-1 p {
+    color: #000;
+    font-family: system-ui;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    width: 72%;
+    padding-top: 10px;
+}
+
+.div-spanir {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    padding: 18px 0px;
+}
+
+.div-spanir span svg {
+    width: 28px;
+    height: 28px;
+}
+
+.div-spanir span {
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    color: #000;
+    font-family: system-ui;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.boxin-1 span {
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    color: #000;
+    font-family: system-ui;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+.list-4-popup-div {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    padding: 20px;
+}
+
+.list-4-popup-div h4 {
+    color: #333;
+    font-family: system-ui;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+
 
 @media screen and (max-width: 1600px){
     div#form-container-ef719d73-0aec-4e1a-88c6-509933b68a2a {
